--- a/styles/viewer.css
+++ b/styles/viewer.css
@@ -11,7 +11,7 @@
 }
 
 #viewer-container {
-    overflow-y: scroll;
+    overflow-y: auto;
 	height: 100%;
 }
 
